force-app/main/default/objects/Manufacturer__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <description>The car brand this manufacturer primarily produces.</description>
    <label>Make</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Car_Brand</valueSetName>
    </valueSet>
</CustomField>