force-app/main/default/objects/Manufacturer__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Primary phone number for the company.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>