force-app/main/default/objects/Manufacturer__c/listViews/Manufacturer_List_View.listView-meta.xml
<ListView>
    <fullName>Manufacturer_List_View</fullName>
    <columns>NAME</columns>
    <columns>Address__c</columns>
    <columns>Make__c</columns>
    <columns>Phone__c</columns>
    <filterScope>Mine</filterScope>
    <label>Manufacturer List View</label>
</ListView>